--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: William's Blog
-subtitle: stay hungry stay folish.
+subtitle: stay hungry stay foolish.
 description: a crazy mam
 author: William
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
